--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vite": "^7.2.4"
   },
   "dependencies": {
+    "@imgly/background-removal": "^1.7.0",
     "@tailwindcss/postcss": "^4.1.18",
     "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
