--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/lz-string": "^1.3.34",
     "@types/react": "^19.2.10",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.2",
@@ -24,6 +25,7 @@
     "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.563.0",
+    "lz-string": "^1.5.0",
     "modern-screenshot": "^4.6.8",
     "react": "^19.2.4",
     "react-dom": "^19.2.4"
